--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   text-align: center;
   background-image: linear-gradient(to top, #4481eb 0%, #04befe 100%);
   height: 100%;
+  padding-bottom: 20rem;
 }
 
 .header {
